welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: not found: value getMondeHaute
    for (i<-1 to getMondeHaute) {
                 ^ColumnByColumn:4: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
      ecritMessage()
      ^